2014-08-06  Sancho Lerena <slerena@artica.es>

	* NetBSD/pandora_server.conf,
	conf/pandora_server.conf.new,
	conf/pandora_server.conf.windows: New default value for icmp_retries
	to have default setup more realiable but a bit slower. 

2014-08-06  Alejandro Gallardo <alejandro.gallardo@artica.es>

	* lib/PandoraFMS/NetworkServer.pm: Little syntax fix.

	* util/pandora_revent_create.pl: Changed the url encode
	separator of the api call from "," to "|".

2014-08-06  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/NetworkServer.pm: Rewrote TCP module socket code for
	  sending data (tcp_send). Fixes ticket #1096.

2014-08-05 Hirofumi Kosaka <kosaka@rworks.jp>

	* lib/PandoraFMS/Core.pm: Suppress "going to normal (warning,
	critical)" events from "unknown" status, if you disable "Throw
	unknown events" at the Console.

2014-08-05 Hirofumi Kosaka <kosaka@rworks.jp>

	* lib/PandoraFMS/Core.pm: Fixed that unknown modules would be
	set to normal if its status is not normal, when new data
	arrives but ff_threshold is greater than 0.

2014-07-30  Ramon Novoa  <rnovoa@artica.es>

	* util/trap_rate.sh: Added to repository. Script to calculate the rate of
	  SNMP traps received by snmptrapd.

2014-07-30  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/Core.pm: Set unknown modules to normal if new data
	  arrives but ff_threshold is greater than 0.

2014-07-28  Ramon Novoa  <rnovoa@artica.es>

	* conf/pandora_server.conf.new,
	  lib/PandoraFMS/Config.pm: Added configuration tokens to disable the
	  translation of enterprise strings and variable bindings (SNMP console).

	* lib/PandoraFMS/SNMPServer.pm: Added thread support to the SNMP console.

	* lib/PandoraFMS/DB.pm: Fixed a warning.

2014-07-25  Miguel de Dios <miguel.dedios@artica.es>
	
	* lib/PandoraFMS/GIS.pm, lib/PandoraFMS/DB.pm,
	lib/PandoraFMS/Core.pm, lib/PandoraFMS/ReconServer.pm,
	lib/PandoraFMS/DataServer.pm: tiny fixes for to improve the support
	of PostgreSQL.

2014-07-25  Junichi Satoh <junichi@rworks.jp>