@@ -244,6 +244,9 @@ xprobe2 /usr/bin/xprobe2
 
 nmap /usr/bin/nmap
 
+# A value that specifies how aggressive nmap should be from 1 to 5. 1 means slower but more reliable, 5 means faster but less reliable. 2 by default.
+nmap_timing_template 2
+
 # snmpget: Needed to do SNMP checks. By default is on /usr/bin/snmpget
 
 snmpget /usr/bin/snmpget
